# Netanomy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake_install.cmake
ZMQBuild/lib/: libzmq.la  libzmq.so.3.1.0
ZMQBuild/lib/pkgconfig/: libzmq.pc
cmake/modules/: FindMacros.cmake  FindZeroMQ.cmake
src/: CMakeLists.txt  master.cpp  zmq.hpp
